--- a/krista_mobile_mobule/lib/l10n/app_en.arb
+++ b/krista_mobile_mobule/lib/l10n/app_en.arb
@@ -1,6 +1,4 @@
 {
     "helloWorld": "Hello World!",
-    "@helloWorld": {
-        "description": "The conventional newborn programmer greeting"
-    }
+    "hasConnectionFalse": "No internet connection :("
 }
