fixed custom meadia picker

--- a/krista_mobile_mobule/lib/l10n/app_ru.arb
+++ b/krista_mobile_mobule/lib/l10n/app_ru.arb
@@ -1,4 +1,5 @@
 {
     "helloWorld": "Привет мир!",
-    "hasConnectionFalse": "Нет подключения к интернету :("
+    "hasConnectionFalse": "Нет подключения к интернету :(",
+    "makingTtBetter": "Делаем лучше"
 }
