--- a/krista_mobile_mobule/lib/l10n/app_en.arb
+++ b/krista_mobile_mobule/lib/l10n/app_en.arb
@@ -1,4 +1,5 @@
 {
     "helloWorld": "Hello World!",
-    "hasConnectionFalse": "No internet connection :("
+    "hasConnectionFalse": "No internet connection :(",
+    "makingTtBetter": "Making it better"
 }
