--- a/krista_mobile_mobule/lib/l10n/app_ru.arb
+++ b/krista_mobile_mobule/lib/l10n/app_ru.arb
@@ -1,5 +1,9 @@
 {
     "helloWorld": "Привет мир!",
     "hasConnectionFalse": "Нет подключения к интернету :(",
-    "makingTtBetter": "Делаем лучше"
+    "makingTtBetter": "Делаем лучше",
+    "save": "Сохранить",
+    "inTheGallery": "Скачать в галерею",
+    "saved": "Сохранено",
+    "share": "Поделиться с друзьями"
 }
