--- a/krista_mobile_mobule/lib/l10n/app_ru.arb
+++ b/krista_mobile_mobule/lib/l10n/app_ru.arb
@@ -5,5 +5,8 @@
     "save": "Сохранить",
     "inTheGallery": "Скачать в галерею",
     "saved": "Сохранено",
-    "share": "Поделиться с друзьями"
+    "share": "Поделиться с друзьями",
+    "style": "Стиль",
+    "color": "Цвет",
+    "quality": "Качество"
 }
